cleanup: Update documentation and configuration files
- Update requirements.txt with missing dependencies (tqdm, pathlib, pytest, black, flake8)
- Enhance .gitignore with comprehensive patterns for cache, logs, reports, and OS files
- Update data/_README.md with new cache, logs, and reports directories
- Update docs/_README.md with PROCESS_STATUS.md live dashboard
- Update scripts/_README.md with new automation and monitoring scripts

Phase 2 of cleanup complete. All documentation now reflects current codebase structure.

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,43 @@ WeedDB.db
 *.log
 update_log.txt
 data/logs/
+logs/
 
-# Cache
+# Cache and temporary files
 data/cache.db
+data/cache.db-*
 *.db-journal
+*.tmp
+*.temp
+
+# Reports and generated content
+data/reports/
+*.pyc
 
 # Python cache
 .mypy_cache/
 __pycache__/
+*.py[cod]
+*$py.class
+
+# Environment and secrets
+.env
+.env.local
+.env.*.local
+secrets.json
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS specific
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
