--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,23 @@ mypy==1.13.0
 tqdm>=4.64.0        # Progress bars for batch operations
 pathlib>=1.0.1      # Path handling (usually included in Python 3.4+)
 
+# Web Interface & Analytics (v0.1.2)
+fastapi>=0.104.0    # Modern web framework
+uvicorn>=0.24.0     # ASGI server
+jinja2>=3.1.0       # Template engine
+pandas>=2.1.0       # Data analysis
+plotly>=5.17.0      # Interactive charts
+matplotlib>=3.8.0   # Static charts
+seaborn>=0.13.0     # Statistical visualization
+python-multipart>=0.0.6  # File uploads
+
+# Configuration & Deployment
+pyyaml>=6.0.0       # YAML configuration
+pydantic>=2.5.0     # Data validation
+python-dotenv>=1.0.0  # Environment variables
+
 # Optional dependencies for development
 pytest>=7.0.0       # Testing framework
 black>=22.0.0       # Code formatting
 flake8>=4.0.0       # Linting
+httpx>=0.25.0       # HTTP client for testing
