feat: v0.1.3 Script & API Integration improvements
- Enhanced /api/products endpoint with advanced filtering, sorting, and pagination
- Added /api/products/{id} endpoint for detailed product information with price history
- Implemented /api/batch/status endpoints for real-time batch processing monitoring
- Extended add_products_parallel.py with web API status updates
- Added httpx dependency for API integration
- Improved error handling and logging across scripts

Script-Web Integration:
- Scripts can now send live status updates to web API
- Web interface shows real-time batch processing progress
- Unified logging and monitoring across CLI and web interfaces
- Enhanced API documentation with new endpoints

Performance & Features:
- Advanced product filtering (genetics, producer, rating, search)
- Comprehensive product details with price history
- Real-time batch status monitoring
- Improved error handling and recovery

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,4 @@ python-dotenv>=1.0.0  # Environment variables
 pytest>=7.0.0       # Testing framework
 black>=22.0.0       # Code formatting
 flake8>=4.0.0       # Linting
-httpx>=0.25.0       # HTTP client for testing
+httpx>=0.25.0       # HTTP client for API integration
